# hive-agents

./: .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REQUIREMENTS.md  memo.txt  pyproject.toml
agents/app/: agent.py
agents/designer/: agent.py  main.py
agents/implementer/: agent.py  main.py
agents/orchestrator/: intake.py  quota.py  retry.py  router.py  schemas.py  server.py  workflow.py
agents/reflection/: agent.py
agents/security_reviewer/: agent.py
agents/tester/: agent.py  main.py
agents/web/: agent.py
agents/webapp/: agent.py
docs/: harness-engineering-comparison.md  openmythos-and-generation-quality.md
evals/: README.md  golden_tasks.json  run_full_eval.py  test_router_golden.py
frontend/: .gcloudignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AuthChip.tsx  AuthGate.tsx  (+3 more)
scripts/: m0_smoke.py  m1_run.py  m2_probe.py  serve_agents.sh  setup_agent_identity.sh  setup_model_armor.sh
shared/: armor.py  layoutcheck.py  memory.py  models.py  runcheck.py  sandbox.py  security_patterns.py  skills.py  telemetry.py  watchdog.py  webcheck.py
skills/api-design/: SKILL.md
skills/fastapi/: SKILL.md
skills/pytest/: SKILL.md
skills/python-style/: SKILL.md
skills/security/: SKILL.md
skills/web-app/: SKILL.md
skills/web-design/: SKILL.md
tests/: test_armor.py  test_intake.py  test_layoutcheck.py  test_memory.py  test_retry.py  test_runcheck.py  test_sandbox.py  test_security_patterns.py  test_telemetry.py  test_watchdog.py  test_webcheck.py
(+10 files in other folders)
